--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <nav>
             <div class="logo">
-                <h4><a href="ZDNavBar.html"><img src="Images/logobasebianca_2.png" alt="img/png"></a></h4>
+                <h4><a href="index.html"><img src="Images/logobasebianca_2.png" alt="img/png"></a></h4>
             </div>
             <ul class="nav-links">
                 <li><a href="#">La nostra storia</a></li>
