--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width= device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie-edge">
-        <link rel="stylesheet" href="NavStyle.css">
+        <link rel="stylesheet" href="CSS/NavStyle.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed">
     </head>
     <body>
@@ -24,7 +24,7 @@
                 <div class="line3"></div>
             </div>
         </nav>
-        <script src="NavActivation.js"></script>
+        <script src="JavaScript/NavActivation.js"></script>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </body>
 </html>
